--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <nav>
-  <a href="/dsfg-hjemmeside/index">Home/a>
-  <a href="/dsfg-hjemmeside/About">About/a>
-  <a href="/dsfg-hjemmeside/Events">Events/a>
+  <a href="/dsfg-hjemmeside/index">Home</a>
+  <a href="/dsfg-hjemmeside/About">About</a>
+  <a href="/dsfg-hjemmeside/Events">Events</a>
 </nav>
 </nav>
